# ScrapeLLM

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
dashboard/: .eslintrc.json  .prettierignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/public/: podcast_summary.json
dashboard/public/podcasts/polygon_alpha_podcast/: april_summary.json  august11_summary.json  august18_summary.json  august24_summary.json  august3_summary.json  december_summary.json  details.json  july13_summary.json  july1_summary.json  july20_summary.json  july27_summary.json  july6_summary.json  june15_summary.json  june1_summary.json  june22_summary.json  november15_summary.json  november28_summary.json  november4_summary.json  october18_summary.json  (+6 more)
dashboard/src/: globals.css  layout.tsx  page-old.tsx
dashboard/src/components/: Navbar.tsx  OnboardingNavbar.tsx  PatternBg.tsx  Stepper.tsx  common.tsx  footer.tsx
dashboard/src/hooks/: useMultistepForm.tsx
dashboard/src/interfaces/: action.ts  index.ts
dashboard/src/lib/: utils.ts
dashboard/src/pages/: _app.tsx  index.tsx  index2.tsx
dashboard/src/store/: auth.ts  global.ts  onboarding.ts
dashboard/src/styles/: globals.css
dashboard/src/utils/: axiosHelper.ts  validation.ts
scrapellm/: cli.py  db.py  indexer.py  openai_cli.py  prompts.py  script.py  settings.py  utils.py  worker.py
scrapellm/cli/: indexer.py  scraper.py  write_email.py
scrapellm/scraper/: pipeline.py  spider.py
scrapellm/server/: main.py
scrapellm/vectorstores/: WeaviateStore.py
(+26 files in other folders)
